Fix privacy policy link in captive portal interstitials.

BUG=642911

Review-Url: https://codereview.chromium.org/2302623002
Cr-Commit-Position: refs/heads/master@{#422634}

Former-commit-id: ee53d14732a274057e9ce51c1d07d87fc7ffc90e